--- a/src/user/templates/list_users.html
+++ b/src/user/templates/list_users.html
@@ -10,6 +10,7 @@
         <p>
             <a href="{% url 'users-update' pk=user.id %}">ID: {{ user.id }}</a>,
             Full name: {{ user.full_name }}
+            Books Count: {{ user.books.count }}
         </p>
     {% endfor %}
 {% endblock content %}
